# icon-gen

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api-parameters.html  cli-options.html  demo.cast  index.html
docs/css/: style.css
examples/: ai_icon_search.py  ai_simple_usage.py  generate_ai_icons.py  generate_ai_icons_batch.py  generate_ai_icons_on_bg.py  generate_ai_icons_singular.py  generate_animated_icons.py  generate_favicon_ico.py  generate_feature_icons.py  generate_judge_icon.py
src/icon_gen/: __init__.py  cli.py  generator.py
src/icon_gen_ai/: __init__.py  __main__.py  cli.py  generator.py
src/icon_gen_ai/ai/: __init__.py  assistant.py  huggingface_provider.py  prompts.py
src/icon_gen_ai/animation/: __init__.py  animator.py  webp_exporter.py
tests/: test_ai.py  test_ai_assistant.py  test_ai_prompts.py  test_animation.py  test_anthropic_provider.py  test_cli.py  test_cli_advanced.py  test_generator.py  test_generator_advanced.py  test_huggingface_provider.py  test_main.py  test_openai_provider.py  test_providers.sh  test_providers_manual.md
