[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icon-gen-ai"  # <-- changed to unique name
version = "0.1.4"
description = "Generate customizable icons from Iconify with easy export to PNG, SVG, WebP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yauheniya Varabyova", email = "yauheniya.ai@gmail.com"},
]
keywords = ["icons", "iconify", "svg", "png", "webp", "logos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0", # For SVG to PNG conversion
    "click>=8.1.0",    # For CLI
]

[project.urls]
Homepage = "https://github.com/yauheniya-ai/icon-gen"
Documentation = "https://github.com/yauheniya-ai/icon-gen#readme"
Repository = "https://github.com/yauheniya-ai/icon-gen"
"Bug Tracker" = "https://github.com/yauheniya-ai/icon-gen/issues"

[project.scripts]
icon-gen-ai = "icon_gen.cli:main"  # <-- update CLI entry to match new name

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["icon_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
