[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icon-gen-ai"
version = "0.4.8"
description = "Generate pixel-perfect icons from Iconify, direct URLs, and local files—with animation support and exports to PNG, SVG, WebP, and ICO"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Yauheniya Varabyova" }
]
keywords = ["icons", "logos", "iconify", "svg", "png", "webp", "ico"]

dependencies = [
    "requests>=2.31.0,<3.0",
    "urllib3>=2.0,<3.0",
    "pillow>=10.0.0,<11.0",
    "cairosvg>=2.7.0,<3.0",
    "click>=8.1.0,<9.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "huggingface-hub>=1.3.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
icon-gen-ai = "icon_gen_ai.cli:cli"

[project.urls]
"Documentation" = "https://yauheniya-ai.github.io/icon-gen-ai/"
"Playground UI" = "https://yauheniya-ai.github.io/icon-gen-ai-playground/"
"Playground API" = "https://huggingface.co/spaces/Yauheniya/icon-gen-ai-api"
"Repository" = "https://github.com/yauheniya-ai/icon-gen-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = [
    "src/icon_gen/*",  # Legacy compatibility layer
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine>=6.2.0",
]
